added item text to language file

--- a/src/main/resources/assets/veterandifficulty/lang/en_us.json
+++ b/src/main/resources/assets/veterandifficulty/lang/en_us.json
@@ -1,4 +1,58 @@
 {
+    "item.veterandifficulty.air_bladder": "Air Bladder",
+    "item.veterandifficulty.copper_axe": "Copper Axe",
+    "item.veterandifficulty.copper_boots": "Copper Boots",
+    "item.veterandifficulty.copper_chestplate": "Copper Chestplate",
+    "item.veterandifficulty.copper_helmet": "Copper Helmet",
+    "item.veterandifficulty.copper_hoe": "Copper Hoe",
+    "item.veterandifficulty.copper_leggings": "Copper Leggings",
+    "item.veterandifficulty.copper_pan": "Copper Pan",
+    "item.veterandifficulty.copper_pickaxe": "Copper Pickaxe",
+    "item.veterandifficulty.copper_shovel": "Copper Shovel",
+    "item.veterandifficulty.copper_sword": "Copper Sword",
+    "item.veterandifficulty.flint_and_tinder": "Flint and Tinder",
+    "item.veterandifficulty.netherite_elytra": "Netherite Elytra",
+    "item.veterandifficulty.past_echoes": "Past Echoes",
     "item.veterandifficulty.raw_diamond": "Raw Diamond",
-    "item.veterandifficulty.cooked_egg": "Cooked Egg"
+    "item.veterandifficulty.totem_shard": "Totem Shard",
+    "item.veterandifficulty.the_void": "The Void",
+    "item.veterandifficulty.void_axe": "Void Axe",
+    "item.veterandifficulty.void_boots": "Void Boots",
+    "item.veterandifficulty.void_chestplate": "Void Chestplate",
+    "item.veterandifficulty.void_elytra": "Void Elytra",
+    "item.veterandifficulty.void_essence": "Void Essence",
+    "item.veterandifficulty.void_gateway": "Void Gateway",
+    "item.veterandifficulty.void_helmet": "Void Helmet",
+    "item.veterandifficulty.void_hoe": "Void Hoe",
+    "item.veterandifficulty.void_ingot": "Void Ingot",
+    "item.veterandifficulty.void_leggings": "Void Leggings",
+    "item.veterandifficulty.void_pickaxe": "Void Pickaxe",
+    "item.veterandifficulty.void_shovel": "Void Shovel",
+    "item.veterandifficulty.void_sword": "Void Sword",
+    "item.veterandifficulty.waxen_wings": "Waxen Wings",
+    "item.veterandifficulty.acacia_pod": "Acacia Pod",
+    "item.veterandifficulty.bamboo_shoot": "Bamboo Shoot",
+    "item.veterandifficulty.birch_bark": "Birch Bark",
+    "item.veterandifficulty.cactus_fruit": "Cactus Fruit",
+    "item.veterandifficulty.calamari": "Calamari",
+    "item.veterandifficulty.cherry": "Cherry",
+    "item.veterandifficulty.cooked_egg": "Cooked Egg",
+    "item.veterandifficulty.creeper_pod": "Creeper Pod",
+    "item.veterandifficulty.crimson_root": "Crimson Root",
+    "item.veterandifficulty.glowing_calamari": "Glowing Calamari",
+    "item.veterandifficulty.lichen_clump": "Lichen Clump",
+    "item.veterandifficulty.mango": "Mango",
+    "item.veterandifficulty.moss_clump": "Moss Clump",
+    "item.veterandifficulty.pumpkin_slice": "Pumpkin Slice",
+    "item.veterandifficulty.ripe_sprout": "Ripe Sprout",
+    "item.veterandifficulty.ripe_sugar_cane": "Ripe Sugar Cane",
+    "item.veterandifficulty.ripe_wart": "Ripe Wart",
+    "item.veterandifficulty.sculk_growth": "Sculk Growth",
+    "item.veterandifficulty.sour_cherry": "Sour Cherry",
+    "item.veterandifficulty.spruce_cone": "Spruce Cone",
+    "item.veterandifficulty.teleported_morsel": "Teleported Morsel",
+    "item.veterandifficulty.warped_root": "Warped Root",
+    "item.veterandifficulty.wild_rice": "Wild Rice",
+    "item.veterandifficulty.wild_root": "Wild Root",
+    "item.veterandifficulty.worm": "Worm"
 }
