--- a/src/main/resources/assets/veterandifficulty/lang/en_us.json
+++ b/src/main/resources/assets/veterandifficulty/lang/en_us.json
@@ -55,5 +55,6 @@
     "item.veterandifficulty.wild_root": "Wild Root",
     "item.veterandifficulty.worm": "Worm",
     "block.veterandifficulty.void_block": "Block of Void",
-    "block.veterandifficulty.void_gateway": "Void Gateway"
+    "block.veterandifficulty.void_gateway": "Void Gateway",
+    "effect.veterandifficulty.scalding": "Scalding"
 }
