implemented new anchored effect

--- a/src/main/resources/assets/veterandifficulty/lang/en_us.json
+++ b/src/main/resources/assets/veterandifficulty/lang/en_us.json
@@ -56,5 +56,6 @@
     "item.veterandifficulty.worm": "Worm",
     "block.veterandifficulty.void_block": "Block of Void",
     "block.veterandifficulty.void_gateway": "Void Gateway",
-    "effect.veterandifficulty.scalding": "Scalding"
+    "effect.veterandifficulty.scalding": "Scalding",
+    "effect.veterandifficulty.anchored": "Anchored"
 }
