wip tier implementation

--- a/src/main/resources/assets/veterandifficulty/lang/en_us.json
+++ b/src/main/resources/assets/veterandifficulty/lang/en_us.json
@@ -1,34 +1,4 @@
 {
-    "item.veterandifficulty.air_bladder": "Air Bladder",
-    "item.veterandifficulty.copper_axe": "Copper Axe",
-    "item.veterandifficulty.copper_boots": "Copper Boots",
-    "item.veterandifficulty.copper_chestplate": "Copper Chestplate",
-    "item.veterandifficulty.copper_helmet": "Copper Helmet",
-    "item.veterandifficulty.copper_hoe": "Copper Hoe",
-    "item.veterandifficulty.copper_leggings": "Copper Leggings",
-    "item.veterandifficulty.copper_pan": "Copper Pan",
-    "item.veterandifficulty.copper_pickaxe": "Copper Pickaxe",
-    "item.veterandifficulty.copper_shovel": "Copper Shovel",
-    "item.veterandifficulty.copper_sword": "Copper Sword",
-    "item.veterandifficulty.flint_and_tinder": "Flint and Tinder",
-    "item.veterandifficulty.netherite_elytra": "Netherite Elytra",
-    "item.veterandifficulty.past_echoes": "Past Echoes",
-    "item.veterandifficulty.raw_diamond": "Raw Diamond",
-    "item.veterandifficulty.totem_shard": "Totem Shard",
-    "item.veterandifficulty.the_void": "The Void",
-    "item.veterandifficulty.void_axe": "Void Axe",
-    "item.veterandifficulty.void_boots": "Void Boots",
-    "item.veterandifficulty.void_chestplate": "Void Chestplate",
-    "item.veterandifficulty.void_elytra": "Void Elytra",
-    "item.veterandifficulty.void_essence": "Void Essence",
-    "item.veterandifficulty.void_helmet": "Void Helmet",
-    "item.veterandifficulty.void_hoe": "Void Hoe",
-    "item.veterandifficulty.void_ingot": "Void Ingot",
-    "item.veterandifficulty.void_leggings": "Void Leggings",
-    "item.veterandifficulty.void_pickaxe": "Void Pickaxe",
-    "item.veterandifficulty.void_shovel": "Void Shovel",
-    "item.veterandifficulty.void_sword": "Void Sword",
-    "item.veterandifficulty.waxen_wings": "Waxen Wings",
     "item.veterandifficulty.acacia_pod": "Acacia Pod",
     "item.veterandifficulty.bamboo_shoot": "Bamboo Shoot",
     "item.veterandifficulty.birch_bark": "Birch Bark",
@@ -54,8 +24,77 @@
     "item.veterandifficulty.wild_rice": "Wild Rice",
     "item.veterandifficulty.wild_root": "Wild Root",
     "item.veterandifficulty.worm": "Worm",
-    "block.veterandifficulty.void_block": "Block of Void",
-    "block.veterandifficulty.void_gateway": "Void Gateway",
+    "item.veterandifficulty.air_bladder": "Air Bladder",
+    "item.veterandifficulty.past_echoes": "Past Echoes",
+    "item.veterandifficulty.totem_shard": "Totem Shard",
+    "item.veterandifficulty.waxen_wings": "Waxen Wings",
+    "item.veterandifficulty.flint_axe": "Flint Axe",
+    "item.veterandifficulty.flint_knife": "Flint Knife",
+    "item.veterandifficulty.flint_and_tinder": "Flint and Tinder",
+    "item.veterandifficulty.copper_axe": "Copper Axe",
+    "item.veterandifficulty.copper_boots": "Copper Boots",
+    "item.veterandifficulty.copper_chestplate": "Copper Chestplate",
+    "item.veterandifficulty.copper_helmet": "Copper Helmet",
+    "item.veterandifficulty.copper_hoe": "Copper Hoe",
+    "item.veterandifficulty.copper_leggings": "Copper Leggings",
+    "item.veterandifficulty.copper_pan": "Copper Pan",
+    "item.veterandifficulty.copper_pickaxe": "Copper Pickaxe",
+    "item.veterandifficulty.copper_shovel": "Copper Shovel",
+    "item.veterandifficulty.copper_sword": "Copper Sword",
+    "item.veterandifficulty.silver_axe": "Silver Axe",
+    "item.veterandifficulty.silver_boots": "Silver Boots",
+    "item.veterandifficulty.silver_chestplate": "Silver Chestplate",
+    "item.veterandifficulty.silver_helmet": "Silver Helmet",
+    "item.veterandifficulty.silver_hoe": "Silver Hoe",
+    "item.veterandifficulty.silver_leggings": "Silver Leggings",
+    "item.veterandifficulty.silver_pickaxe": "Silver Pickaxe",
+    "item.veterandifficulty.silver_shovel": "Silver Shovel",
+    "item.veterandifficulty.silver_sword": "Silver Sword",
+    "item.veterandifficulty.mithril_axe": "Mithril Axe",
+    "item.veterandifficulty.mithril_boots": "Mithril Boots",
+    "item.veterandifficulty.mithril_chestplate": "Mithril Chestplate",
+    "item.veterandifficulty.mithril_helmet": "Mithril Helmet",
+    "item.veterandifficulty.mithril_hoe": "Mithril Hoe",
+    "item.veterandifficulty.mithril_leggings": "Mithril Leggings",
+    "item.veterandifficulty.mithril_pickaxe": "Mithril Pickaxe",
+    "item.veterandifficulty.mithril_shovel": "Mithril Shovel",
+    "item.veterandifficulty.mithril_sword": "Mithril Sword",
+    "item.veterandifficulty.raw_diamond": "Raw Diamond",
+    "item.veterandifficulty.netherite_elytra": "Netherite Elytra",
+    "item.veterandifficulty.enderium_axe": "Enderium Axe",
+    "item.veterandifficulty.enderium_boots": "Enderium Boots",
+    "item.veterandifficulty.enderium_chestplate": "Enderium Chestplate",
+    "item.veterandifficulty.enderium_gem": "Enderium Gem",
+    "item.veterandifficulty.enderium_helmet": "Enderium Helmet",
+    "item.veterandifficulty.enderium_hoe": "Enderium Hoe",
+    "item.veterandifficulty.enderium_leggings": "Enderium Leggings",
+    "item.veterandifficulty.enderium_pickaxe": "Enderium Pickaxe",
+    "item.veterandifficulty.enderium_shovel": "Enderium Shovel",
+    "item.veterandifficulty.enderium_sword": "Enderium Sword",
+    "block.veterandifficulty.enderium_gateway": "Enderium Gateway",
+    "block.veterandifficulty.enderium_block": "Block of Enderium",
+    "item.veterandifficulty.tenebris_void": "The Void",
+    "item.veterandifficulty.tenebris_axe": "Tenebris Axe",
+    "item.veterandifficulty.tenebris_boots": "Tenebris Boots",
+    "item.veterandifficulty.tenebris_chestplate": "Tenebris Chestplate",
+    "item.veterandifficulty.tenebris_elytra": "Tenebris Elytra",
+    "item.veterandifficulty.tenebris_essence": "Tenebris Essence",
+    "item.veterandifficulty.tenebris_helmet": "Tenebris Helmet",
+    "item.veterandifficulty.tenebris_hoe": "Tenebris Hoe",
+    "item.veterandifficulty.tenebris_ingot": "Tenebris Ingot",
+    "item.veterandifficulty.tenebris_leggings": "Tenebris Leggings",
+    "item.veterandifficulty.tenebris_pickaxe": "Tenebris Pickaxe",
+    "item.veterandifficulty.tenebris_shovel": "Tenebris Shovel",
+    "item.veterandifficulty.tenebris_sword": "Tenebris Sword",
+    "item.veterandifficulty.zenith_axe": "Zenith Axe",
+    "item.veterandifficulty.zenith_boots": "Zenith Boots",
+    "item.veterandifficulty.zenith_chestplate": "Zenith Chestplate",
+    "item.veterandifficulty.zenith_helmet": "Zenith Helmet",
+    "item.veterandifficulty.zenith_hoe": "Zenith Hoe",
+    "item.veterandifficulty.zenith_leggings": "Zenith Leggings",
+    "item.veterandifficulty.zenith_pickaxe": "Zenith Pickaxe",
+    "item.veterandifficulty.zenith_shovel": "Zenith Shovel",
+    "item.veterandifficulty.zenith_sword": "Zenith Sword",
     "effect.veterandifficulty.scalding": "Scalding",
     "effect.veterandifficulty.anchored": "Anchored",
     "entity.veterandifficulty.magic_projectile": "Magic Projectile"
