--- a/src/main/resources/assets/veterandifficulty/lang/en_us.json
+++ b/src/main/resources/assets/veterandifficulty/lang/en_us.json
@@ -46,6 +46,8 @@
     "item.veterandifficulty.silver_chestplate": "Silver Chestplate",
     "item.veterandifficulty.silver_helmet": "Silver Helmet",
     "item.veterandifficulty.silver_hoe": "Silver Hoe",
+    "block.veterandifficulty.silver_ore": "Silver Ore",
+    "item.veterandifficulty.raw_silver": "Raw Silver",
     "item.veterandifficulty.silver_ingot": "Silver Ingot",
     "item.veterandifficulty.silver_leggings": "Silver Leggings",
     "item.veterandifficulty.silver_pickaxe": "Silver Pickaxe",
@@ -56,6 +58,8 @@
     "item.veterandifficulty.mithril_chestplate": "Mithril Chestplate",
     "item.veterandifficulty.mithril_helmet": "Mithril Helmet",
     "item.veterandifficulty.mithril_hoe": "Mithril Hoe",
+    "block.veterandifficulty.mithril_ore": "Mithril Ore",
+    "item.veterandifficulty.raw_mithril": "Raw Mithril",
     "item.veterandifficulty.mithril_ingot": "Mithril Ingot",
     "item.veterandifficulty.mithril_leggings": "Mithril Leggings",
     "item.veterandifficulty.mithril_pickaxe": "Mithril Pickaxe",
@@ -67,7 +71,9 @@
     "item.veterandifficulty.enderium_axe": "Enderium Axe",
     "item.veterandifficulty.enderium_boots": "Enderium Boots",
     "item.veterandifficulty.enderium_chestplate": "Enderium Chestplate",
-    "item.veterandifficulty.enderium_elytra": "ZeniEnderiumth Elytra",
+    "item.veterandifficulty.enderium_elytra": "Enderium Elytra",
+    "block.veterandifficulty.enderium_ore": "Enderium Ore",
+    "item.veterandifficulty.raw_enderium": "Raw Enderium",
     "item.veterandifficulty.enderium_gem": "Enderium Gem",
     "item.veterandifficulty.enderium_helmet": "Enderium Helmet",
     "item.veterandifficulty.enderium_hoe": "Enderium Hoe",
@@ -82,9 +88,10 @@
     "item.veterandifficulty.tenebris_boots": "Tenebris Boots",
     "item.veterandifficulty.tenebris_chestplate": "Tenebris Chestplate",
     "item.veterandifficulty.tenebris_elytra": "Tenebris Elytra",
-    "item.veterandifficulty.tenebris_essence": "Tenebris Essence",
     "item.veterandifficulty.tenebris_helmet": "Tenebris Helmet",
     "item.veterandifficulty.tenebris_hoe": "Tenebris Hoe",
+    "block.veterandifficulty.tenebris_ore": "Tenebris Ore",
+    "item.veterandifficulty.tenebris_essence": "Tenebris Essence",
     "item.veterandifficulty.tenebris_ingot": "Tenebris Ingot",
     "item.veterandifficulty.tenebris_leggings": "Tenebris Leggings",
     "item.veterandifficulty.tenebris_pickaxe": "Tenebris Pickaxe",
