--- a/src/main/resources/assets/veterandifficulty/lang/en_us.json
+++ b/src/main/resources/assets/veterandifficulty/lang/en_us.json
@@ -1,7 +1,7 @@
 {
+    "itemGroup.veterandifficulty.main": "Veteran Difficulty",
     "item.veterandifficulty.acacia_pod": "Acacia Pod",
     "item.veterandifficulty.bamboo_shoot": "Bamboo Shoot",
-    "item.veterandifficulty.birch_bark": "Birch Bark",
     "item.veterandifficulty.cactus_fruit": "Cactus Fruit",
     "item.veterandifficulty.calamari": "Calamari",
     "item.veterandifficulty.cherry": "Cherry",
@@ -28,8 +28,20 @@
     "item.veterandifficulty.past_echoes": "Past Echoes",
     "item.veterandifficulty.totem_shard": "Totem Shard",
     "item.veterandifficulty.waxen_wings": "Waxen Wings",
+    "item.veterandifficulty.oak_bark": "Oak Bark",
+    "item.veterandifficulty.spruce_bark": "Spruce Bark",
+    "item.veterandifficulty.birch_bark": "Birch Bark",
+    "item.veterandifficulty.acacia_bark": "Acacia Bark",
+    "item.veterandifficulty.cherry_bark": "Cherry Bark",
+    "item.veterandifficulty.crimson_bark": "Crimson Bark",
+    "item.veterandifficulty.dark_oak_bark": "Dark Oak Bark",
+    "item.veterandifficulty.jungle_bark": "Jungle Bark",
+    "item.veterandifficulty.mangrove_bark": "Mangrove Bark",
+    "item.veterandifficulty.warped_bark": "Warped Bark",
+    "item.veterandifficulty.pale_oak_bark": "Pale Oak Bark",
     "item.veterandifficulty.flint_axe": "Flint Axe",
     "item.veterandifficulty.flint_knife": "Flint Knife",
+    "item.veterandifficulty.flint_pickaxe": "Flint Pickaxe",
     "item.veterandifficulty.flint_and_tinder": "Flint and Tinder",
     "item.veterandifficulty.copper_axe": "Copper Axe",
     "item.veterandifficulty.copper_boots": "Copper Boots",
@@ -49,6 +61,7 @@
     "block.veterandifficulty.silver_ore": "Silver Ore",
     "item.veterandifficulty.raw_silver": "Raw Silver",
     "item.veterandifficulty.silver_ingot": "Silver Ingot",
+    "block.veterandifficulty.silver_block": "Block of Silver",
     "item.veterandifficulty.silver_leggings": "Silver Leggings",
     "item.veterandifficulty.silver_pickaxe": "Silver Pickaxe",
     "item.veterandifficulty.silver_shovel": "Silver Shovel",
@@ -58,9 +71,10 @@
     "item.veterandifficulty.mithril_chestplate": "Mithril Chestplate",
     "item.veterandifficulty.mithril_helmet": "Mithril Helmet",
     "item.veterandifficulty.mithril_hoe": "Mithril Hoe",
-    "block.veterandifficulty.mithril_ore": "Mithril Ore",
+    "block.veterandifficulty.deepslate_mithril_ore": "Mithril Ore",
     "item.veterandifficulty.raw_mithril": "Raw Mithril",
     "item.veterandifficulty.mithril_ingot": "Mithril Ingot",
+    "block.veterandifficulty.mithril_block": "Block of Mithril",
     "item.veterandifficulty.mithril_leggings": "Mithril Leggings",
     "item.veterandifficulty.mithril_pickaxe": "Mithril Pickaxe",
     "item.veterandifficulty.mithril_shovel": "Mithril Shovel",
@@ -75,6 +89,7 @@
     "block.veterandifficulty.enderium_ore": "Enderium Ore",
     "item.veterandifficulty.raw_enderium": "Raw Enderium",
     "item.veterandifficulty.enderium_gem": "Enderium Gem",
+    "block.veterandifficulty.enderium_block": "Block of Enderium",
     "item.veterandifficulty.enderium_helmet": "Enderium Helmet",
     "item.veterandifficulty.enderium_hoe": "Enderium Hoe",
     "item.veterandifficulty.enderium_leggings": "Enderium Leggings",
@@ -82,7 +97,6 @@
     "item.veterandifficulty.enderium_shovel": "Enderium Shovel",
     "item.veterandifficulty.enderium_sword": "Enderium Sword",
     "block.veterandifficulty.enderium_gateway": "Enderium Gateway",
-    "block.veterandifficulty.enderium_block": "Block of Enderium",
     "item.veterandifficulty.tenebris_void": "The Void",
     "item.veterandifficulty.tenebris_axe": "Tenebris Axe",
     "item.veterandifficulty.tenebris_boots": "Tenebris Boots",
@@ -91,8 +105,9 @@
     "item.veterandifficulty.tenebris_helmet": "Tenebris Helmet",
     "item.veterandifficulty.tenebris_hoe": "Tenebris Hoe",
     "block.veterandifficulty.tenebris_ore": "Tenebris Ore",
-    "item.veterandifficulty.tenebris_essence": "Tenebris Essence",
+    "item.veterandifficulty.raw_tenebris": "Raw Tenebris",
     "item.veterandifficulty.tenebris_ingot": "Tenebris Ingot",
+    "block.veterandifficulty.tenebris_block": "Block of Tenebris",
     "item.veterandifficulty.tenebris_leggings": "Tenebris Leggings",
     "item.veterandifficulty.tenebris_pickaxe": "Tenebris Pickaxe",
     "item.veterandifficulty.tenebris_shovel": "Tenebris Shovel",
@@ -104,6 +119,7 @@
     "item.veterandifficulty.zenith_helmet": "Zenith Helmet",
     "item.veterandifficulty.zenith_hoe": "Zenith Hoe",
     "item.veterandifficulty.zenith_ingot": "Zenith Ingot",
+    "block.veterandifficulty.zenith_block": "Block of Zenith",
     "item.veterandifficulty.zenith_leggings": "Zenith Leggings",
     "item.veterandifficulty.zenith_pickaxe": "Zenith Pickaxe",
     "item.veterandifficulty.zenith_shovel": "Zenith Shovel",
